updated swagger and fixes links
