# app.js
@@ -1,10 +1,8 @@
 let createError = require('http-errors')
 let express = require('express')
-let path = require('path')
 let cookieParser = require('cookie-parser')
 let logger = require('morgan')
 
-let indexRouter = require('./routes/index')
 let usersRouter = require('./routes/users')
 
 let mongoose = require('mongoose')
@@ -13,9 +11,9 @@ mongoose.connect(`mongodb://${config.db.username}:${config.db.password}@${config
 
 let app = express()
 
-app.use(function(req, res, next) {
-  res.header("Access-Control-Allow-Origin", "*")
-  res.header("Access-Control-Allow-Headers", "Origin, X-Requested-With, Content-Type, Accept")
+app.use(function (req, res, next) {
+  res.header('Access-Control-Allow-Origin', '*')
+  res.header('Access-Control-Allow-Headers', 'Origin, X-Requested-With, Content-Type, Accept')
   next()
 })
 
@@ -24,11 +22,18 @@ app.use(express.json())
 app.use(express.urlencoded({ extended: false }))
 app.use(cookieParser())
 
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('./public/swagger.json');
+const swaggerUi = require('swagger-ui-express')
+const swaggerDocument = require('./public/swagger.json')
 
-app.use('/', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+let options = {
+  'explorer': true
+}
+
 app.use('/users', usersRouter)
+app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument, options));
+app.use('/', (req, res) => {
+  res.redirect('/docs')
+})
 
 // catch 404 and forward to error handler
 app.use((req, res, next) => {
